# hft-crypto-streaming

./: README.md
coinbase/: Makefile  coinbase  coinbase.cpp
streaming/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
streaming/btc/binance/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/btc/binance-us/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/btc/bitfinex/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/btc/bitmex/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/btc/bitstamp/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/btc/coinbase/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/btc/cryptocom/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/btc/gemini/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/eth/binance/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/eth/binance-us/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/eth/bitfinex/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/eth/bitmex/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/eth/bitstamp/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/eth/coinbase/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/eth/cryptocom/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/eth/gemini/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/parallel/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
streaming/sequential/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  temp.txt
streaming/valuation/: CMakeLists.txt  Makefile  cmake_install.cmake  market_data_parser.h  order.h  valuation_engine.h
valuation/: market_data_parser.cpp  order.h  valuation_engine.cpp
