cmake_minimum_required(VERSION 3.14)
set(NAME streaming)
project(${NAME})
set(CMAKE_CXX_STANDARD 14)
if(NOT APPLE AND NOT MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
endif()
if (WIN32)
  set(CMAKE_BUILD_TYPE "Release")
endif()
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Debug")
endif()
message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
get_filename_component(CCAPI_PROJECT_DIR ../ccapi ABSOLUTE)
message(STATUS "CCAPI_PROJECT_DIR: ${CCAPI_PROJECT_DIR}")
set(RAPIDJSON_INCLUDE_DIR ${CCAPI_PROJECT_DIR}/dependency/rapidjson/include)
set(WEBSOCKETPP_INCLUDE_DIR ${CCAPI_PROJECT_DIR}/dependency/websocketpp)
set(BOOST_INCLUDE_DIR ${CCAPI_PROJECT_DIR}/dependency/boost)
find_package(OpenSSL REQUIRED)
include_directories(${CCAPI_PROJECT_DIR}/include ${WEBSOCKETPP_INCLUDE_DIR} ${BOOST_INCLUDE_DIR} ${RAPIDJSON_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
set(ADDITIONAL_LINK_LIBRARIES "")
if (WIN32)
  set(ADDITIONAL_LINK_LIBRARIES ws2_32)
endif()
link_libraries(OpenSSL::Crypto OpenSSL::SSL ${ADDITIONAL_LINK_LIBRARIES})

add_subdirectory(btc/binance)
add_subdirectory(btc/binance-us)
add_subdirectory(btc/bitfinex)
add_subdirectory(btc/bitmex)
add_subdirectory(btc/bitstamp)
add_subdirectory(btc/coinbase)
add_subdirectory(btc/cryptocom)
add_subdirectory(btc/gemini)

add_subdirectory(eth/binance)
add_subdirectory(eth/binance-us)
add_subdirectory(eth/bitfinex)
add_subdirectory(eth/bitmex)
add_subdirectory(eth/bitstamp)
add_subdirectory(eth/coinbase)
add_subdirectory(eth/cryptocom)
add_subdirectory(eth/gemini)

add_subdirectory(sequential)
add_subdirectory(parallel)