set(NAME sequential)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_MARKET_DATA)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_BINANCE)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_BINANCE_US)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_BITFINEX)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_BITMEX)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_BITSTAMP)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_COINBASE)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_CRYPTOCOM)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_GEMINI)
add_executable(${NAME} main.cpp)
